PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-code-correct-Tests_a_corriger-311_expression_arithm/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:12: error: lvalue required as left operand of assignment
    3 |     b = 5+a=5;
      |            ^

return code: 1
